# VectorMath

./: .gitignore  CMakeLists.txt  VectorMath.cpp  cmake-nix.sh  cmake-win.cmd  readme.md
Include/: BiVector3.hpp  Config.h  Line.hpp  Matrix2.hpp  Normal.hpp  Plane.hpp  RegisterTypes.hpp  StorageTypes.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorMath.natvis
Include/impl/: BasicMath.cpp  BasicMath.hpp  Convert.cpp  Extract.hpp  LoadStore.hpp  Permute.hpp  Vector3.inl  VectorBase.hpp  VectorBase3.hpp  VectorBase4.hpp  hash.hpp  wedge.hpp
